<resources>
    <string name="app_name">The Hunt</string>
    <string name="tab_home">Home</string>
    <string name="tab_news">News</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_streams">Streams</string>
    <string name="tab_chat">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_fragment_home">Hello home</string>
    <string name="hello_fragment_news">Hello news</string>
    <string name="hello_fragment_profile">Hello profile</string>

    //Username, email and password
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="facebook_app_id">555088585290890</string>
    <string name="fb_login_protocol_scheme">fb555088585290890</string>


</resources>
