<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
            android:id="@+id/home"
            android:title="@string/tab_home"
            android:icon="@drawable/ic_home_black_24dp"/>

    <item
            android:id="@+id/news"
            android:title="@string/tab_news"
            android:icon="@drawable/noticias2_foreground"/>

    <item
            android:id="@+id/profile"
            android:title="@string/tab_profile"
            android:icon="@drawable/profile_foreground"/>
    <item
            android:id="@+id/streams"
            android:title="@string/tab_streams"
            android:icon="@drawable/streams_foreground"/>

    <item
        android:id="@+id/chat"
        android:title="@string/tab_chat"
        android:icon="@drawable/chat_foreground"/>


</menu>