<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".activity.SignUp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:orientation="vertical">


        <TextView

                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@color/colorFont" />

        <EditText
                android:id="@+id/username_current"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:inputType="text"
                android:textColor="@color/colorFont">

        </EditText>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/colorFont"></TextView>

        <EditText
                android:id="@+id/mail_current"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:inputType="text"
                android:textColor="@color/colorFont"></EditText>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="@color/colorFont" />

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:inputType="text"
                android:textColor="@color/colorFont"></EditText>

        <Button
                android:id="@+id/Button_SignUp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="SignUp"></Button>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>